--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,175 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+
 body,
 input,
 button {
-  font: 16px "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
+
+input,
+button {
+  font-size: 16px;
+}
+
 .head_bar {
   padding: 12px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #23CB34;
+  background-color: cornflowerblue;
   color: white;
 }
-.input_section {
+
+main {
+  padding: 0 16px 16px 16px;
+}
+
+.book_shelf_section {
   display: flex;
-  flex-direction: column;
-  margin: 20px;
-  padding: 20px;
-  border-radius: 10px;
-  display: none;
+  column-gap: 16px;
 }
-.input_section > h2 {
-  text-align: center;
-  color: #23CB34;
-}
-.input_section > form > .input {
-  margin: 8px 0;
-}
-.input_section > form > button {
-  background-color: #23CB34;
-  color: white;
-  border: 0;
-  border-radius: 5px;
-  display: block;
-  width: 100%;
-  padding: 8px;
-  cursor: pointer;
-}
-.input_section > form > button > span {
-  font-weight: bold;
-}
-.input_section > form > .input > input {
-  display: block;
-  width: 100%;
-  padding: 8px;
-  border-radius: 5px;
-}
-.input_section > form > .input > label {
-  color: #23CB34;
-  font-weight: bold;
-}
-.input_section > form > .input_inline {
-  margin: 12px 0;
-  display: flex;
-  align-items: center;
-}
-.input_section > form > .input_inline > label {
-  color: #23CB34;
-  font-weight: bold;
-  margin-right: 10px;
-}
-.search_section,
+
 .information_section {
-  margin: 16px auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 16px;
-  border-radius: 10px;
-}
-.search_section > h2,
-.information_section > h2 {
-  color: #23CB34;
-}
-.search_section > form,
-.information_section > form {
-  padding: 16px;
-  width: 100%;
-  display: grid;
-  grid-template-columns: auto 0.9fr 0.3fr 0.5fr;
-  grid-gap: 10px;
-}
-.search_section > form > label,
-.information_section > form > label {
-  display: flex;
-  align-items: center;
-}
-.search_section > form > input,
-.information_section > form > input {
-  padding: 5px;
-  border-radius: 5px;
-}
-.search_section > form > button,
-.information_section > form > button {
-  background-color: #23CB34;
-  color: white;
-  border: 0;
-  border-radius: 5px;
-  cursor: pointer;
-}
-.book_shelf {
-  margin: 16px 0 0 0;
-  padding: 16px;
-  border-radius: 10px;
-}
-.book_shelf > h2 {
-  color: #23CB34;
-  text-align: center;
-}
-.book_shelf > .book_list {
-  padding: 16px;
-}
-.book_shelf > .book_list > .book_item {
-  padding: 8px 16px 16px 16px;
-  border-radius: 5px;
-  margin: 10px 0;
-}
-.book_shelf > .book_list > .book_item > h3,
-p {
-  margin: 8px 0;
-}
-.book_shelf > .book_list > .book_item > .action > button {
-  border: 0;
-  padding: 5px;
-  margin: 0 5px 0 0;
-  border-radius: 5px;
-  cursor: pointer;
-}
-.book_shelf > .book_list > .book_item > .action > .green {
-  background-color: darkgreen;
-  color: white;
-}
-.book_shelf > .book_list > .book_item > .action > .red {
-  background-color: darkred;
-  color: white;
-}
-.bookshelf-operation {
-  display: flex;
-  flex-direction: row;
-}
-.bookshelf-operation .section,
-.bookshelf-section section {
-  width: 48%;
-  margin: 1rem auto;
-}
-.information_section {
-  margin-top: 0;
   min-height: 59%;
 }
-.bookshelf-item {
-  width: 100% !important;
-}
-.bookshelf-section {
-  display: flex;
-  flex-direction: row;
-}
-.bookshelf-section section {
-  width: calc(100% / 2);
-  margin: 1rem 0.25rem;
-}
+
 .information-wrap {
   display: flex;
   flex-direction: row;
   width: 100%;
   justify-content: space-around;
   margin: auto;
+  margin-top: 10px;
 }
+
 .information-item {
   border-radius: 10px;
   display: flex;
@@ -178,35 +56,180 @@ p {
   justify-content: center;
   margin: 0 0.5rem;
   padding: 1rem;
-  background-color: #23CB34;
+  background-color: cornflowerblue;
   color: #ffffff;
 }
+
 .information-item span {
   padding-top: 0.4rem;
 }
-.bg-success,
-.btn-success {
-  background-color: #2dce89 !important;
-  color: #FFFFFF;
+
+.input_section {
+  display: none;
+  flex-direction: column;
+  padding: 16px;
+  margin-top: 16px;
+  border: 1px solid black;
+  border-radius: 10px;
 }
-.bg-danger,
-.btn-danger {
-  background-color: #f5365c !important;
-  color: #FFFFFF;
+
+.input_section > h2 {
+  text-align: center;
+  color: cornflowerblue;
 }
-.book_item {
+
+.input_section > form > .input {
+  margin: 8px 0;
+}
+
+.input_section > form > button,
+.input_section > form > div > div > button {
+  background-color: cornflowerblue;
+  color: white;
+  border: 0;
+  border-radius: 5px;
+  display: block;
+  width: 100%;
+  padding: 8px;
+  cursor: pointer;
+}
+
+.input_section > form > button > span {
+  font-weight: bold;
+}
+
+.input_section > form > .input > input {
+  display: block;
+  width: 100%;
+  padding: 8px;
+  border-radius: 5px;
+}
+
+.input_section > form > .input > label {
+  color: cornflowerblue;
+  font-weight: bold;
+}
+
+.input_section > form > .input_inline {
+  margin: 12px 0;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
-.action-control-book {
+
+.input_section > form > .input_inline > label {
+  color: cornflowerblue;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.search_section,
+.information_section {
+  margin: 16px 0 0 0;
   display: flex;
   flex-direction: column;
-  margin: auto 0;
+  align-items: center;
+  padding: 16px;
+  border: 1px solid black;
+  border-radius: 10px;
 }
-.action-control-book button {
-  margin: 0.5rem auto !important ;
+
+.search_section > h2,
+.information_section > h2 {
+  color: cornflowerblue;
 }
+
+.search_section > form {
+  padding: 16px;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  grid-gap: 10px;
+}
+
+.search_section > form > label {
+  display: flex;
+  align-items: center;
+}
+
+.search_section > form > input {
+  padding: 5px;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.search_section > form > button {
+  background-color: cornflowerblue;
+  color: white;
+  border: 0;
+  border-radius: 5px;
+  width: 30%;
+  cursor: pointer;
+}
+
+.book_shelf {
+  margin: 16px 0 0 0;
+  border: 1px solid black;
+  padding: 16px;
+  border-radius: 10px;
+  width: 100%;
+}
+
+.book_shelf > h2 {
+  color: cornflowerblue;
+}
+
+.book_shelf > .book_list {
+  padding: 5px;
+}
+
+.book_shelf > .book_list > .book_item {
+  padding: 8px 16px 16px 16px;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 10px 0;
+}
+
+.book_shelf > .book_list > .book_item > h3,
+p {
+  margin: 8px 0;
+}
+
+.book_shelf > .book_list > .book_item > .action > button {
+  border: 0;
+  padding: 5px;
+  margin: 0 5px 0 0;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.book_shelf > .book_list > .book_item > .action > .green {
+  background-color: green;
+  color: white;
+}
+
+.book_shelf > .book_list > .book_item > .action > .red {
+  background-color: red;
+  color: white;
+}
+
+.book_shelf > .book_list > .book_item > .action > .gold {
+  background-color: goldenrod;
+  color: white;
+}
+.bx-search {
+  font-size: 35px;
+}
+
+.edit_section {
+  display: none;
+  margin: 16px 0;
+}
+
+.show {
+  display: flex;
+}
+
 .shadow {
   box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
 }
