--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,235 +1,240 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 body,
 input,
 button {
-  font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 input,
 button {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 .head_bar {
-  padding: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: cornflowerblue;
-  color: white;
+    padding: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: cornflowerblue;
+    color: white;
 }
 
 main {
-  padding: 0 16px 16px 16px;
+    padding: 0 16px 16px 16px;
 }
 
 .book_shelf_section {
-  display: flex;
-  column-gap: 16px;
+    display: flex;
+    column-gap: 16px;
 }
 
 .information_section {
-  min-height: 59%;
+    min-height: 59%;
 }
 
 .information-wrap {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-around;
-  margin: auto;
-  margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
+    margin: auto;
+    margin-top: 10px;
 }
 
 .information-item {
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 0 0.5rem;
-  padding: 1rem;
-  background-color: cornflowerblue;
-  color: #ffffff;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 0.5rem;
+    padding: 1rem;
+    background-color: cornflowerblue;
+    color: #ffffff;
 }
 
 .information-item span {
-  padding-top: 0.4rem;
+    padding-top: 0.4rem;
 }
 
 .input_section {
-  display: none;
-  flex-direction: column;
-  padding: 16px;
-  margin-top: 16px;
-  border: 1px solid black;
-  border-radius: 10px;
+    display: none;
+    flex-direction: column;
+    padding: 16px;
+    margin-top: 16px;
+    border: 1px solid black;
+    border-radius: 10px;
 }
 
 .input_section > h2 {
-  text-align: center;
-  color: cornflowerblue;
+    text-align: center;
+    color: cornflowerblue;
 }
 
 .input_section > form > .input {
-  margin: 8px 0;
+    margin: 8px 0;
 }
 
 .input_section > form > button,
 .input_section > form > div > div > button {
-  background-color: cornflowerblue;
-  color: white;
-  border: 0;
-  border-radius: 5px;
-  display: block;
-  width: 100%;
-  padding: 8px;
-  cursor: pointer;
+    background-color: cornflowerblue;
+    color: white;
+    border: 0;
+    border-radius: 5px;
+    display: block;
+    width: 100%;
+    padding: 8px;
+    cursor: pointer;
 }
 
 .input_section > form > button > span {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .input_section > form > .input > input {
-  display: block;
-  width: 100%;
-  padding: 8px;
-  border-radius: 5px;
+    display: block;
+    width: 100%;
+    padding: 8px;
+    border-radius: 5px;
 }
 
 .input_section > form > .input > label {
-  color: cornflowerblue;
-  font-weight: bold;
+    color: cornflowerblue;
+    font-weight: bold;
 }
 
 .input_section > form > .input_inline {
-  margin: 12px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    margin: 12px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .input_section > form > .input_inline > label {
-  color: cornflowerblue;
-  font-weight: bold;
-  margin-right: 10px;
+    color: cornflowerblue;
+    font-weight: bold;
+    margin-right: 10px;
 }
 
 .search_section,
 .information_section {
-  margin: 16px 0 0 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 16px;
-  border: 1px solid black;
-  border-radius: 10px;
+    margin: 16px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 16px;
+    border: 1px solid black;
+    border-radius: 10px;
 }
 
 .search_section > h2,
 .information_section > h2 {
-  color: cornflowerblue;
+    color: cornflowerblue;
 }
 
 .search_section > form {
-  padding: 16px;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  grid-gap: 10px;
+    padding: 16px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    grid-gap: 10px;
 }
 
 .search_section > form > label {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .search_section > form > input {
-  padding: 5px;
-  border-radius: 5px;
-  width: 100%;
+    padding: 5px;
+    border-radius: 5px;
+    width: 100%;
 }
 
 .search_section > form > button {
-  background-color: cornflowerblue;
-  color: white;
-  border: 0;
-  border-radius: 5px;
-  width: 30%;
-  cursor: pointer;
+    background-color: cornflowerblue;
+    color: white;
+    border: 0;
+    border-radius: 5px;
+    width: 30%;
+    cursor: pointer;
 }
 
 .book_shelf {
-  margin: 16px 0 0 0;
-  border: 1px solid black;
-  padding: 16px;
-  border-radius: 10px;
-  width: 100%;
+    margin: 16px 0 0 0;
+    border: 1px solid black;
+    padding: 16px;
+    border-radius: 10px;
+    width: 100%;
 }
 
 .book_shelf > h2 {
-  color: cornflowerblue;
+    color: cornflowerblue;
 }
 
 .book_shelf > .book_list {
-  padding: 5px;
+    padding: 5px;
 }
 
 .book_shelf > .book_list > .book_item {
-  padding: 8px 16px 16px 16px;
-  border: 1px solid black;
-  border-radius: 5px;
-  margin: 10px 0;
+    padding: 8px 16px 16px 16px;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: 10px 0;
 }
 
 .book_shelf > .book_list > .book_item > h3,
 p {
-  margin: 8px 0;
+    margin: 8px 0;
 }
 
 .book_shelf > .book_list > .book_item > .action > button {
-  border: 0;
-  padding: 5px;
-  margin: 0 5px 0 0;
-  border-radius: 5px;
-  cursor: pointer;
+    border: 0;
+    padding: 5px;
+    margin: 0 5px 0 0;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .book_shelf > .book_list > .book_item > .action > .green {
-  background-color: green;
-  color: white;
+    background-color: green;
+    padding: 10px;
+    color: white;
 }
 
 .book_shelf > .book_list > .book_item > .action > .red {
-  background-color: red;
-  color: white;
+    background-color: red;
+    padding: 10px 15px;
+    color: white;
 }
 
 .book_shelf > .book_list > .book_item > .action > .gold {
-  background-color: goldenrod;
-  color: white;
+    background-color: goldenrod;
+    padding: 10px 15px;
+    color: white;
 }
-.bx-search {
-  font-size: 35px;
+
+.fa-magnifying-glass {
+    font-size: 30px;
 }
 
 .edit_section {
-  display: none;
-  margin: 16px 0;
+    display: none;
+    margin: 16px 0;
 }
 
 .show {
-  display: flex;
+    display: flex;
 }
 
 .shadow {
-  box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
+    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+        0 8px 10px -6px rgb(0 0 0 / 0.1);
 }
